; ModuleID = '/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_hmac_prov.c_hmac_get_ctx_params.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_hmac_prov.c_hmac_get_ctx_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OSSL_MAC_PARAM_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*)* @hmac_get_ctx_params to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hmac_get_ctx_params(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = load i32, i32* @OSSL_MAC_PARAM_SIZE, align 4
  %9 = call i32* @OSSL_PARAM_locate(i32* %7, i32 %8)
  store i32* %9, i32** %6, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load i32*, i32** %6, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @hmac_size(i8* %13)
  %15 = call i32 @OSSL_PARAM_set_size_t(i32* %12, i32 %14)
  store i32 %15, i32* %3, align 4
  br label %17

16:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %17

17:                                               ; preds = %16, %11
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32* @OSSL_PARAM_locate(i32*, i32) #1

declare dso_local i32 @OSSL_PARAM_set_size_t(i32*, i32) #1

declare dso_local i32 @hmac_size(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
